// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a user task duration selection for user task duration reports 1`] = `
<Popover
  className="AggregationType"
  floating={true}
  isTabTip={true}
  trigger={
    <ButtonTrigger
      iconDescription="Aggregation"
      kind="ghost"
      renderIcon={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "propTypes": Object {
            "size": [Function],
          },
          "render": [Function],
        }
      }
      size="sm"
    >
      P50
    </ButtonTrigger>
  }
>
  <Form>
    <ForwardRef(Stack)
      gap={3}
    >
      <FormGroup
        legendText="User task duration"
      >
        <ForwardRef(Stack)
          gap={3}
        >
          <Toggle
            disabled={false}
            hideLabel={true}
            id="total"
            key="total"
            labelText="Total"
            onToggle={[Function]}
            size="sm"
            toggled={false}
          />
          <Toggle
            disabled={false}
            hideLabel={true}
            id="work"
            key="work"
            labelText="Assigned"
            onToggle={[Function]}
            size="sm"
            toggled={false}
          />
          <Toggle
            disabled={true}
            hideLabel={true}
            id="idle"
            key="idle"
            labelText="Unassigned"
            onToggle={[Function]}
            size="sm"
            toggled={true}
          />
        </ForwardRef(Stack)>
      </FormGroup>
      <FormGroup
        legendText="Basic aggregations"
      >
        <ForwardRef(Stack)
          gap={3}
        >
          <Toggle
            disabled={false}
            hideLabel={true}
            id="sum"
            key="sum"
            labelText="Sum"
            onToggle={[Function]}
            size="sm"
            toggled={false}
          />
          <Toggle
            disabled={false}
            hideLabel={true}
            id="min"
            key="min"
            labelText="Minimum"
            onToggle={[Function]}
            size="sm"
            toggled={false}
          />
          <Toggle
            disabled={false}
            hideLabel={true}
            id="avg"
            key="avg"
            labelText="Average"
            onToggle={[Function]}
            size="sm"
            toggled={false}
          />
          <Toggle
            disabled={false}
            hideLabel={true}
            id="max"
            key="max"
            labelText="Maximum"
            onToggle={[Function]}
            size="sm"
            toggled={false}
          />
        </ForwardRef(Stack)>
      </FormGroup>
      <FormGroup
        legendText="Percentile aggregations"
      >
        <ForwardRef(Stack)
          gap={3}
        >
          <Toggle
            disabled={false}
            hideLabel={true}
            id="P99"
            key="P99"
            labelText="P99"
            onToggle={[Function]}
            size="sm"
            toggled={false}
          />
          <Toggle
            disabled={false}
            hideLabel={true}
            id="P95"
            key="P95"
            labelText="P95"
            onToggle={[Function]}
            size="sm"
            toggled={false}
          />
          <Toggle
            disabled={false}
            hideLabel={true}
            id="P90"
            key="P90"
            labelText="P90"
            onToggle={[Function]}
            size="sm"
            toggled={false}
          />
          <Toggle
            disabled={false}
            hideLabel={true}
            id="P75"
            key="P75"
            labelText="P75"
            onToggle={[Function]}
            size="sm"
            toggled={false}
          />
          <Toggle
            disabled={true}
            hideLabel={true}
            id="P50"
            key="P50"
            labelText="P50 (median)"
            onToggle={[Function]}
            size="sm"
            toggled={true}
          />
          <Toggle
            disabled={false}
            hideLabel={true}
            id="P25"
            key="P25"
            labelText="P25"
            onToggle={[Function]}
            size="sm"
            toggled={false}
          />
        </ForwardRef(Stack)>
      </FormGroup>
    </ForwardRef(Stack)>
  </Form>
</Popover>
`;

exports[`should render an aggregation selection for duration reports 1`] = `
<Popover
  className="AggregationType"
  floating={true}
  isTabTip={true}
  trigger={
    <ButtonTrigger
      iconDescription="Aggregation"
      kind="ghost"
      renderIcon={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "propTypes": Object {
            "size": [Function],
          },
          "render": [Function],
        }
      }
      size="sm"
    >
      P50
    </ButtonTrigger>
  }
>
  <Form>
    <ForwardRef(Stack)
      gap={3}
    >
      <FormGroup
        legendText="Basic aggregations"
      >
        <ForwardRef(Stack)
          gap={3}
        >
          <Toggle
            disabled={false}
            hideLabel={true}
            id="sum"
            key="sum"
            labelText="Sum"
            onToggle={[Function]}
            size="sm"
            toggled={false}
          />
          <Toggle
            disabled={false}
            hideLabel={true}
            id="min"
            key="min"
            labelText="Minimum"
            onToggle={[Function]}
            size="sm"
            toggled={false}
          />
          <Toggle
            disabled={false}
            hideLabel={true}
            id="avg"
            key="avg"
            labelText="Average"
            onToggle={[Function]}
            size="sm"
            toggled={false}
          />
          <Toggle
            disabled={false}
            hideLabel={true}
            id="max"
            key="max"
            labelText="Maximum"
            onToggle={[Function]}
            size="sm"
            toggled={false}
          />
        </ForwardRef(Stack)>
      </FormGroup>
      <FormGroup
        legendText="Percentile aggregations"
      >
        <ForwardRef(Stack)
          gap={3}
        >
          <Toggle
            disabled={false}
            hideLabel={true}
            id="P99"
            key="P99"
            labelText="P99"
            onToggle={[Function]}
            size="sm"
            toggled={false}
          />
          <Toggle
            disabled={false}
            hideLabel={true}
            id="P95"
            key="P95"
            labelText="P95"
            onToggle={[Function]}
            size="sm"
            toggled={false}
          />
          <Toggle
            disabled={false}
            hideLabel={true}
            id="P90"
            key="P90"
            labelText="P90"
            onToggle={[Function]}
            size="sm"
            toggled={false}
          />
          <Toggle
            disabled={false}
            hideLabel={true}
            id="P75"
            key="P75"
            labelText="P75"
            onToggle={[Function]}
            size="sm"
            toggled={false}
          />
          <Toggle
            disabled={true}
            hideLabel={true}
            id="P50"
            key="P50"
            labelText="P50 (median)"
            onToggle={[Function]}
            size="sm"
            toggled={true}
          />
          <Toggle
            disabled={false}
            hideLabel={true}
            id="P25"
            key="P25"
            labelText="P25"
            onToggle={[Function]}
            size="sm"
            toggled={false}
          />
        </ForwardRef(Stack)>
      </FormGroup>
    </ForwardRef(Stack)>
  </Form>
</Popover>
`;

exports[`should render nothing if the current result is no duration and the view is not variable 1`] = `""`;
